fixed blurry text and created simple about me page

--- a/css/about-styles.css
+++ b/css/about-styles.css
@@ -2,11 +2,43 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 70%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    max-width: 1500px;
-    height: 100vh;
+    width: 50vw;
+    height: 50vh;
     margin: 0px auto;
     color: white;
+    align-items: center;
+    justify-content: center;
+}
+
+.about-header {
+    font-size: 2.5vw;
+    padding: 20px;
+}
+
+.about-text {
+    padding: 30px;
+    text-align: center;
+}
+
+@media (max-width: 1500px) {
+    .about-container {
+        width: 70vw;
+    }
+    .about-header {
+        font-size: 2.8vw;
+        padding: 20px;
+    }
+}
+
+@media (max-width: 1000px) {
+    .about-container {
+        width: 90vw;
+    }
+    .about-header {
+        font-size: 5vw;
+        padding: 10px;
+    }
 }
