--- a/css/skills-styles.css
+++ b/css/skills-styles.css
@@ -17,7 +17,7 @@
 
 .skill {
     background: var(--skills-background);
-    backdrop-filter: blur(4px);
+    /* backdrop-filter: blur(0px); */
     align-self: center;
     justify-self: center;
     position: relative;
@@ -40,17 +40,14 @@
     margin-left: 10%;
     text-align: center;
     float: left;
-    /* background: blueviolet; */
 }
 
 .skill-description {
     margin: 35px 20px;
     text-align: center;
-    /* background: rgb(201, 85, 85); */
 }
 
 img {
-    /* background: burlywood; */
     position: relative;
     left: 40px;
     max-width: 8%;
@@ -60,7 +57,7 @@ img {
 @media (max-width: 1200px) {
     .skills-container {
         grid-template-columns: repeat(2, 1fr);
-    }   
+    }
 }
 
 @media (max-width: 900px) {
